--- a/templates/book.html
+++ b/templates/book.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <h1>Книги 2023</h1>
-
+<a href="/add-cooment/"> оставить отзыв</a>
+<a href="/create_book/">Добавить</a>
+<a href="/book_list/">Удалить</a>
+<a href="#">Изменить</a>
     <ul>
         {%for i in book_key%}
         <li>
