--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -12,5 +12,16 @@
 <iframe src="{{book_key.video}}" frameborder="0"></iframe>
 <p>{{book_key.cost}}</p>
 <p>{{book_key.created_date}}</p>
+
+<table border="2">
+    <tr>
+        <th>Created Date</th> <th>Review</th> <th>Grade</th>
+    </tr>
+    {% for i in book_key.review_object.all %}
+    <tr>
+        <td>{{i.created_at}}</td> <td>{{i.text_review}}</td> <td>{{i.rate_stars}}</td>
+    </tr>
+    {% endfor %}
+</table>
 </body>
 </html>
