--- a/templates/createReview.html
+++ b/templates/createReview.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CreateReview</title>
 </head>
 <body>
-    <form action="/add-cooment/" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">Send</button>
-        <button type="reset">Cancel</button>
-    </form>
+<form action="/add-cooment/"  method="POST" enctype="multipart/form-data">
+  {% csrf_token %}
+  {{form.as_p}}
+  <button type="submit">Отправить</button>
+  <button type="reset">Отменить</button>
+</form>
 </body>
 </html>
