--- a/templates/create_book.html
+++ b/templates/create_book.html
@@ -10,7 +10,7 @@
 <div class="form-right-decoration"></div>
 <div class="circle"></div>
 <div class="form-inner">
-<h3>Добавить фильм</h3>
+<h3>Добавить книгу</h3>
     {% csrf_token %}
     {{form.as_p}}
     <button type="submit">Сохранить</button>
