--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -5,19 +5,21 @@
     <title>Detail</title>
 </head>
 <body>
-<h1>{{book_key.title}}</h1>
-<p>{{book_key.description}}</p>
-<img src="{{book_key.image.url}}" alt="net">
-<p>{{book_key.genre}}</p>
-<iframe src="{{book_key.video}}" frameborder="0"></iframe>
-<p>{{book_key.cost}}</p>
-<p>{{book_key.created_date}}</p>
+<button><a href="/book_list/{{object.id}}/update/">Изменить</a></button>
+<button><a href="/book_list/{{object.id}}/delete/">Удалить</a></button>
+<h1>{{object.title}}</h1>
+<p>{{object.description}}</p>
+<img src="{{object.image.url}}" alt="net">
+<p>{{object.genre}}</p>
+<iframe src="{{object.video}}" frameborder="0"></iframe>
+<p>{{object.cost}}</p>
+<p>{{object.created_date}}</p>
 
 <table border="2">
     <tr>
         <th>Created Date</th> <th>Review</th> <th>Grade</th>
     </tr>
-    {% for i in book_key.review_object.all %}
+    {% for i in object.review_object.all %}
     <tr>
         <td>{{i.created_at}}</td> <td>{{i.text_review}}</td> <td>{{i.rate_stars}}</td>
     </tr>
