--- a/templates/book.html
+++ b/templates/book.html
@@ -10,7 +10,9 @@
 <h1>Книги 2023</h1>
 <a href="/add-cooment/"> оставить отзыв</a>
 <a href="/create_book/">Добавить</a>
-<form action="{% url 'search' %}" method="GET" class="d-flex" role="search">
+<a class="nav-link" href="/register/">Создать аккаунт</a>
+
+<form action="{% url 'books:search' %}" method="GET" class="d-flex" role="search">
     <input class="form-control me-2" type="text" name="q" type="search" placeholder="Поиск" aria-label="Поиск">
     <button class="btn btn-outline-success" type="submit">Поиск</button>
 </form>
